--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Seção de Perfil (Nome e Foto) -->
     <section id="perfil">
         <h1>Luiz Pedro Pereira dos Santos</h1>
-        <img src="minhafoto.png" alt="Sem foto(tirar duvida prof)">
+        <img src="https://media.licdn.com/dms/image/v2/D4D03AQEWxvTxzUsBJQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1711109407136?e=2147483647&v=beta&t=8EFrHaAxM9WKOsuFNv1wiUtQpQU0eUdhFNVFrur3Kmw" alt="Sem foto(tirar duvida prof)">
     </section>
 
     <!-- Seção de Resumo -->
