--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Seção de Resumo -->
     <section id="resumo">
         <h2>Resumo</h2>
-        <p>Aluno da Universidade Tecnologica do Parana, Campus Cornelio Procopio(UTFPR-CP)
-        <p>Seus principais interesses: banco de dados,busca de entretenimento e games.<p>
+        <p>  -Aluno da Universidade Tecnologica do Parana, Campus Cornelio Procopio(UTFPR-CP)
+        <p>  -Seus principais interesses: banco de dados,busca de entretenimento e games.<p>
         </p>
     </section>
 
