--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <!-- Seção de Resumo -->
     <section id="resumo">
         <h2>Resumo</h2>
-        <p>  -Aluno da Universidade Tecnologica do Parana, Campus Cornelio Procopio(UTFPR-CP)
-        <p>  -Seus principais interesses: banco de dados,busca de entretenimento e games.<p>
-        </p>
+        <ul></ul>
+        <li>Aluno da Universidade Tecnologica do Parana, Campus Cornelio Procopio(UTFPR-CP)</li>
+        <li>Seus principais interesses: banco de dados,busca de entretenimento e games.</li>
+        </p>ul
     </section>
 
     <!-- Seção de Objetivos de Desenvolvimento Sustentável (ODS) -->
@@ -39,8 +40,10 @@
     <!-- Seção de Educação -->
     <section id="educacao">
         <h2>Educação</h2>
-        <p>-Cyriaco Russo, Ensino Medio,2023</p>
-        <p>-Marketing Digital,Curso Online,2019</p>
+        <ul>
+        <li>-Cyriaco Russo, Ensino Medio,2023</li>
+        <li></li>-Marketing Digital,Curso Online,2019</li>
+        </ul>
     </section>
 
     <!-- Seção de Hobbies -->
