--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- Seção de Resumo -->
     <section id="resumo">
         <h2>Resumo</h2>
-        <ul></ul>
+        <ul>
         <li>Aluno da Universidade Tecnologica do Parana, Campus Cornelio Procopio(UTFPR-CP)</li>
         <li>Seus principais interesses: banco de dados,busca de entretenimento e games.</li>
-        </p>ul
+        </ul>
     </section>
 
     <!-- Seção de Objetivos de Desenvolvimento Sustentável (ODS) -->
@@ -42,7 +42,7 @@
         <h2>Educação</h2>
         <ul>
         <li>-Cyriaco Russo, Ensino Medio,2023</li>
-        <li></li>-Marketing Digital,Curso Online,2019</li>
+        <li>-Marketing Digital,Curso Online,2019</li>
         </ul>
     </section>
 
